// Vitest Snapshot v1

exports[`within projectsSelectors > the projectsForInclusionsTableSelector matches its snapshot based on state.allEntities.areExistsInTargetShown > when state.allEntities.areExistsInTargetShown = false 1`] = `
[
  {
    "clientId": "3001",
    "color": "#ea468d",
    "entryCount": 3,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": true,
    "id": "2001",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-01",
    "memberOf": "projects",
    "name": "Test Project A",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#3750b5",
    "entryCount": 3,
    "estimate": {
      "estimate": 40,
      "type": "MANUAL",
    },
    "existsInTarget": true,
    "id": "2002",
    "isActive": false,
    "isActiveInSource": false,
    "isActiveInTarget": true,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-02",
    "memberOf": "projects",
    "name": "Test Project B",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#c56bff",
    "entryCount": 3,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": true,
    "id": "2003",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-03",
    "memberOf": "projects",
    "name": "Test Project C",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#04bb9b",
    "entryCount": 3,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2004",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project D",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#205500",
    "entryCount": 4,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2005",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project E",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#a01aa5",
    "entryCount": 4,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2006",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project F",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
]
`;

exports[`within projectsSelectors > the projectsForInclusionsTableSelector matches its snapshot based on state.allEntities.areExistsInTargetShown > when state.allEntities.areExistsInTargetShown = false 2`] = `
[
  {
    "clientId": null,
    "color": "#04bb9b",
    "entryCount": 3,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2004",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project D",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#205500",
    "entryCount": 4,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2005",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project E",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#a01aa5",
    "entryCount": 4,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2006",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project F",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
]
`;

exports[`within projectsSelectors > the selectors match their snapshots > for the projectIdToLinkedIdSelector 1`] = `
[
  {
    "clientId": null,
    "color": "#04bb9b",
    "entryCount": 3,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2004",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project D",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#205500",
    "entryCount": 4,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2005",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project E",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
]
`;

exports[`within projectsSelectors > the selectors match their snapshots > for the projectIdToLinkedIdSelector 2`] = `
[
  "2004",
  "2005",
]
`;

exports[`within projectsSelectors > the selectors match their snapshots > for the projectIdToLinkedIdSelector 3`] = `
[
  {
    "clientId": null,
    "color": "#04bb9b",
    "entryCount": 3,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2004",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project D",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#205500",
    "entryCount": 4,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2005",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project E",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
]
`;

exports[`within projectsSelectors > the selectors match their snapshots > for the projectIdToLinkedIdSelector 4`] = `
[
  {
    "clientId": "3001",
    "color": "#ea468d",
    "entryCount": 3,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2001",
    "isActive": true,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-01",
    "memberOf": "projects",
    "name": "Test Project A",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#3750b5",
    "entryCount": 3,
    "estimate": {
      "estimate": 40,
      "type": "MANUAL",
    },
    "id": "2002",
    "isActive": false,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-02",
    "memberOf": "projects",
    "name": "Test Project B",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#c56bff",
    "entryCount": 3,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2003",
    "isActive": true,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-03",
    "memberOf": "projects",
    "name": "Test Project C",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#04bb9b",
    "entryCount": 3,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2004",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project D",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#205500",
    "entryCount": 4,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2005",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project E",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
  {
    "clientId": null,
    "color": "#a01aa5",
    "entryCount": 4,
    "estimate": {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2006",
    "isActive": true,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project F",
    "userIds": [
      "6001",
    ],
    "workspaceId": "1001",
  },
]
`;

exports[`within projectsSelectors > the selectors match their snapshots > for the projectIdToLinkedIdSelector 5`] = `
{
  "2001": "clock-project-01",
  "2002": "clock-project-02",
  "2003": "clock-project-03",
  "clock-project-01": "2001",
  "clock-project-02": "2002",
  "clock-project-03": "2003",
}
`;

exports[`within projectsSelectors > the selectors match their snapshots > for the projectsByWorkspaceIdByToolNameSelector 1`] = `
{
  "entryCount": 20,
  "existsInTarget": 3,
  "isActiveInSource": 5,
  "isActiveInTarget": 2,
  "isIncluded": 2,
}
`;

exports[`within projectsSelectors > the selectors match their snapshots > for the projectsByWorkspaceIdByToolNameSelector 2`] = `
{
  "clockify": {
    "clock-workspace-01": [
      {
        "clientId": "clock-client-01",
        "color": "#ea468d",
        "entryCount": 0,
        "estimate": {
          "estimate": "PT0S",
          "type": "AUTO",
        },
        "id": "clock-project-01",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "2001",
        "memberOf": "projects",
        "name": "Test Project A",
        "userIds": [
          "clock-user-01",
        ],
        "workspaceId": "clock-workspace-01",
      },
      {
        "clientId": "clock-client-02",
        "color": "#c56bff",
        "entryCount": 0,
        "estimate": {
          "estimate": "PT0S",
          "type": "AUTO",
        },
        "id": "clock-project-02",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "2002",
        "memberOf": "projects",
        "name": "Test Project B",
        "userIds": [
          "clock-user-01",
        ],
        "workspaceId": "clock-workspace-01",
      },
      {
        "clientId": "",
        "color": "#04bb9b",
        "entryCount": 0,
        "estimate": {
          "estimate": "PT0S",
          "type": "AUTO",
        },
        "id": "clock-project-03",
        "isActive": false,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "2003",
        "memberOf": "projects",
        "name": "Test Project C",
        "userIds": [
          "clock-user-01",
        ],
        "workspaceId": "clock-workspace-01",
      },
      {
        "clientId": "",
        "color": "#04bb9b",
        "entryCount": 0,
        "estimate": {
          "estimate": "PT0S",
          "type": "MANUAL",
        },
        "id": "clock-project-04",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "2004",
        "memberOf": "projects",
        "name": "Test Project D",
        "userIds": [
          "clock-user-01",
        ],
        "workspaceId": "clock-workspace-01",
      },
      {
        "clientId": "",
        "color": "#205500",
        "entryCount": 0,
        "estimate": {
          "estimate": "PT0S",
          "type": "AUTO",
        },
        "id": "clock-project-05",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "2005",
        "memberOf": "projects",
        "name": "Test Project E",
        "userIds": [
          "clock-user-01",
        ],
        "workspaceId": "clock-workspace-01",
      },
      {
        "clientId": "",
        "color": "#a01aa5",
        "entryCount": 0,
        "estimate": {
          "estimate": "PT0S",
          "type": "AUTO",
        },
        "id": "clock-project-06",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "2006",
        "memberOf": "projects",
        "name": "Test Project F",
        "userIds": [
          "clock-user-01",
        ],
        "workspaceId": "clock-workspace-01",
      },
    ],
  },
  "toggl": {
    "1001": [
      {
        "clientId": "3001",
        "color": "#ea468d",
        "entryCount": 3,
        "estimate": {
          "estimate": 0,
          "type": "MANUAL",
        },
        "id": "2001",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "clock-project-01",
        "memberOf": "projects",
        "name": "Test Project A",
        "userIds": [
          "6001",
        ],
        "workspaceId": "1001",
      },
      {
        "clientId": null,
        "color": "#3750b5",
        "entryCount": 3,
        "estimate": {
          "estimate": 40,
          "type": "MANUAL",
        },
        "id": "2002",
        "isActive": false,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "clock-project-02",
        "memberOf": "projects",
        "name": "Test Project B",
        "userIds": [
          "6001",
        ],
        "workspaceId": "1001",
      },
      {
        "clientId": null,
        "color": "#c56bff",
        "entryCount": 3,
        "estimate": {
          "estimate": 0,
          "type": "MANUAL",
        },
        "id": "2003",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "clock-project-03",
        "memberOf": "projects",
        "name": "Test Project C",
        "userIds": [
          "6001",
        ],
        "workspaceId": "1001",
      },
      {
        "clientId": null,
        "color": "#04bb9b",
        "entryCount": 3,
        "estimate": {
          "estimate": 0,
          "type": "MANUAL",
        },
        "id": "2004",
        "isActive": true,
        "isBillable": false,
        "isIncluded": true,
        "isPublic": false,
        "linkedId": null,
        "memberOf": "projects",
        "name": "Test Project D",
        "userIds": [
          "6001",
        ],
        "workspaceId": "1001",
      },
      {
        "clientId": null,
        "color": "#205500",
        "entryCount": 4,
        "estimate": {
          "estimate": 0,
          "type": "MANUAL",
        },
        "id": "2005",
        "isActive": true,
        "isBillable": false,
        "isIncluded": true,
        "isPublic": false,
        "linkedId": null,
        "memberOf": "projects",
        "name": "Test Project E",
        "userIds": [
          "6001",
        ],
        "workspaceId": "1001",
      },
      {
        "clientId": null,
        "color": "#a01aa5",
        "entryCount": 4,
        "estimate": {
          "estimate": 0,
          "type": "MANUAL",
        },
        "id": "2006",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": null,
        "memberOf": "projects",
        "name": "Test Project F",
        "userIds": [
          "6001",
        ],
        "workspaceId": "1001",
      },
    ],
  },
}
`;
